--- a/workflows/main.yml
+++ b/workflows/main.yml
@@ -23,14 +23,17 @@ jobs:
         python -m pip install --upgrade pip
         pip install Flask
 
-    - name: Build website
-      run: python app.py
+    - name: Build static website
+      run: |
+        flask freeze
+        mkdir -p _build
+        mv build/* _build/
 
     - name: Archive built files
       uses: actions/upload-artifact@v2
       with:
         name: built-files
-        path: templates
+        path: _build
 
   deploy:
     needs: build
@@ -44,10 +47,10 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: built-files
-        path: templates
+        path: _build
 
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./templates
+        publish_dir: ./_build
